I put the user-profile-pic to the right of the review, and fixed the navbar overlap issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,7 @@ max-height: 450px;
 .white-space {
   background-color: white;
   width: 200px;
-  padding: 25px;
+  padding: 50px;
   border: 25px solid white;
   margin: auto;
 }
@@ -43,8 +43,8 @@ max-height: 450px;
 }
 
 .avatar {
-  height: 75px;
-  width: 75px;
+  height: 90px;
+  width: 100px;
   margin-inline-start: 20px;
 }
 
